# alpos

./: .gitignore  .travis.yml  README.md  getTables.sh  install.sh  installAlpos.sh  installAlposNoDependencies.sh  installApfel.sh  installApfelxx.sh  installDpdfLib.sh  installFast.sh  installHERAAverager.sh  installPlHelper.sh  installQCDnum.sh  rd  setup.sh
alpos/: CMakeLists.txt  FindAPFEL.cmake  FindAPFELxx.cmake  FindAPPLgrid.cmake  FindEigen.cmake  FindFastNLO.cmake  FindLHAPDF.cmake  FindQCDNUM.cmake  FindROOT.cmake  Makefile.standalone  README  getTables.sh
alpos/datafiles/h1/1107.3420/: h1_ddis_lowE.raw
alpos/datafiles/h1/1206.7007/herafitter/: 10_CC_dxdQ2_L_Pol-0.370.txt  10_CC_dxdQ2_R_Pol0.325.txt  9_CC_dxdQ2_L_Pol-0.258.txt  9_CC_dxdQ2_R_Pol0.360.txt  EminusLH.DoubleQ2X.CombJets.Pol-25.84.txt  EminusRH.DoubleQ2X.CombJets.Pol36.03.txt  EplusLH.DoubleQ2X.CombJets.Pol-36.96.txt  EplusRH.DoubleQ2X.CombJets.Pol32.50.txt  data9.zz.txt
alpos/farm/: AExt.super  Ext.super  FitA.super  FitA_org.str  FitB_org.str  H1diffQcdnum_templ.str  H1diff_templ.str  alpos.sh  alpos.submit  evalSuper.py  run.py  runAll.sh
alpos/include/alpos/: AChisq.h  AData.h  AError.h  AFactory.h  AInvMatrices.h  AParmNamed.h  ASubsetData.h  ASubsetFunction.h  ASuperData.h  ASuperTheory.h  ATask.h  ATaskResult.h  ATheory.h  ATheoryHandler.h  AfastNLODISnorm.h.old  Alpos.h  AlposObject.h  AlposTools.h
alpos/include/alpos/functions/: AAlphaEmRun.h  AApfel.h  AApfelDDISCS.h  AApfelDISCS.h  AApfelDISCSEWFit.h  AApfelxxAlphas.h  AApfelxxDDISCS.h  AApfelxxDISCS.h  AApfelxxPDF.h  AApfelxxReggeonCS.h  AApplgrid.h  ABelleTDCPV.h  ACRunDecFunction.h  ADPDF.h  AEprc.h  AExampleFunction.h  AFixedValues.h  AFunctionTF1.h  AH1DPDF2006.h  ALhapdf6.h  ALhapdf6Alphas.h  APDFQ0_BiLog.h  APDFQ0_HERA.h  APDFQ0_HERAStyle.h  APDFQ0_LHAPDF.h  APDFQ0_QcdnumExample.h  APDFQ0_diff.h  AQcdnumAlphas.h  AQcdnumDDISCS.h  AQcdnumDISCS.h  AQcdnumDISCSEWFit.h  AQcdnumInit.h  AQcdnumPDF.h  ASingleConstant.h  AStrowp1.h  ATwoPomeronModel.h  ATwoPomeronParams.h  AUserFunction.h  AfastNLO.h  AfastNLODiffDIS.h  (+8 more)
alpos/include/alpos/tasks/: AApcFitter.h  AApcalc.h  AChi2FitPDFas.h  AChi2InterpolPDFas.h  AChi2Scan.h  AConstLQFitter.h  AConstraint.h  AContour.h  AExampleTask.h  AFitter.h  ALHAPDFErrors.h  APDFQ0_HERAStyleNoSum.h  APDFUncer.h  APrintDataTheory.h  APrintErrorSummary.h  APrintSteering.h  APrintTheorySet.h  AReplaceDataWithTheoryValues.h  ASaveDPDFTGraph.h  ASaveDataTheory.h  ASavePDFTGraph.h  ASaveTheorySet.h  AScaleUncertainty.h  AStatAnalysis.h
alpos/macros/: comparePdf.C  dplotter.C  dplotterErr.C  plotCoverage.C  q2Scan.py  reggeFit.C  test.C
alpos/python/: alpos.i
alpos/src/: main.cc
alpos/src/aem/: EPRC_wrap.f  diffpdferr.f  formff.f  owens.cc  pion_stand_alone.f
alpos/src/aem/Boris/ddis2jet/: h12006flux.err.f  h12006pdf.f  i_2006_fitb.f  lha2006fita.f  lha2006fitb.f  qcd_2006.f
alpos/src/aem/h1pdf2006/: readme_h12006.txt
alpos/src/aem/h1pdf2006Err/: h12006flux.err.f  h12006pdf.f  lha2006fitb.f
alpos/src/alpos/: AChisq.cc  AData.cc  AError.cc  AFactory.cc  AInvMatrices.cc  AParmNamed.cc  ASubsetData.cc  ASubsetFunction.cc  ASuperData.cc  ASuperTheory.cc  ATask.cc  ATheoryHandler.cc  Alpos.cc  AlposTools.cc
alpos/src/alpos/functions/: AAlphaEmRun.cc  AApfelAs.cc  AApfelDDISCS.cc  AApfelDISCS.cc  AApfelDISCSEWFit.cc  AApfelInit.cc  AApfelPDF.cc  AApfelQEDEvol.cc  AApfelxxAlphas.cc  AApfelxxDDISCS.cc  AApfelxxDISCS.cc  AApfelxxPDF.cc  AApfelxxReggeonCS.cc  AApplgrid.cc  ABelleTDCPV.cc  ACRunDecFunction.cc  ADPDF.cc  AEprc.cc  AExampleFunction.cc  AFixedValues.cc  AFunctionTF1.cc  AH1DPDF2006.cc  ALhapdf6.cc  ALhapdf6Alphas.cc  APDFQ0_BiLog.cc  APDFQ0_HERA.cc  APDFQ0_HERAStyle.cc  APDFQ0_LHAPDF.cc  APDFQ0_QcdnumExample.cc  APDFQ0_diff.cc  AQcdnumAlphas.cc  AQcdnumDDISCS.cc  AQcdnumDISCS.cc  AQcdnumDISCSEWFit.cc  AQcdnumInit.cc  AQcdnumPDF.cc  ASingleConstant.cc  AStrowp1.cc  ATwoPomeronModel.cc  ATwoPomeronParams.cc  (+11 more)
alpos/src/alpos/tasks/: AApcFitter.cc  AApcalc.cc  AChi2FitPDFas.cc  AChi2InterpolPDFas.cc  AChi2Scan.cc  AConstLQFitter.cc  AConstraint.cc  AContour.cc  AExampleTask.cc  AFitter.cc  ALHAPDFErrors.cc  APDFQ0_HERAStyleNoSum.cc  APDFUncer.cc  APrintDataTheory.cc  APrintErrorSummary.cc  AReplaceDataWithTheoryValues.cc  ASaveDPDFTGraph.cc  ASaveDataTheory.cc  ASavePDFTGraph.cc  AScaleUncertainty.cc  AStatAnalysis.cc
alpos/src/apcalc/: README  apcalc.F  apcom.inc
alpos/src/apccpp/: Apccpp.cc  Apccpp.h  Makefile.standalone  README
alpos/src/apccpp/example/: Constraint.cc  Constraint.h  ExampleConstraints.cc
alpos/steering/: 6.herapdf10.apfel.str  Belle_TDCPV.str  CMSInclAlphas.str  CMS_InclJets_Alphas-chi2fit.str  D0InclAlphasAllData.str  D0InclAlphasRedData.str  FitAwithJets.str  FitAwithJetsOld.str  H1ApfelxxPDFdiff.str  H1InclJets.str  H1InclNormAlphas.str  H1MultijetsAlphas.str  H1diff.str  H1diffA.str  H1diffQcdnum.str  HERAPDF10.str  HERAPDF20.str  HERAPDF20andGlobalJets.str  SavePDF.str  TwoPomeronModel.str  alpos.str  apfelhera1.str  apfeltest.str  default.PDFQ0_HERA.H1PDF2012.str  default.PDFQ0_HERA.HERAI.str  default.PDFQ0_HERA.HERAII.str  default.PDFQ0_HERA_10pts.str  h1pdf2012.apfel.pol.str  h1pdf2012.qcdnum.str  heraC.str  lhec.str  testDPDF.str  welcome.str
alpos/steering/cms/1410.6765/: CMSInclAlphas-chi2fit-ALHAPDFErrors.str  CMSInclAlphas-chi2fit.str  CMSInclAlphas-chi2interpol.str
alpos/test/: alpos.out.root  steering.str
alpos/theoryfiles/: InclusiveNJets_fnr0001midpHT_v23_fix_I723509.tab  InclusiveNJets_fnr0001midpMB_v23_fix_I723509.tab  fnh5001_60G_HS12.tab  fnt2007midp_cv21_I790693.tab
alpos/tutorial/: 1.welcome.str  2.SavePDF.str  3.LHAPDF.str  3c.LHAPDF.str  4.data.str  4b.data.str  4c.data.str  5b.alphasfit.str  6.herapdf10.apfel.str  6.herapdf10.str  6b.herapdf20.str  7a.apcalc.str  7b.apccpp.str
documents/H1prelim-19-011/: .gitignore  H1prelim-19-011.bbl  H1prelim-19-011.bib  H1prelim-19-011.blg  H1prelim-19-011.tex  makefile
documents/H1prelim-19-013/: H1prelim-19-011.bib  H1prelim-19-013.bib  H1prelim-19-013.tex  (+2 more)
testEvol/: Makefile  test.cpp
(+9 files in other folders)
